# Whispr

./: .env.template  .gitignore  HOW_TO_RUN.md  Interview AI.code-workspace  PRD.md  README.md  SKILLS_MAPPING.md  _check.py  audio_capture.py  config.py  context_manager.py  gemini_client.py  install_deps.ps1  install_new_deps.ps1  main.py  overlay_ui.py  pyproject.toml  qwen_client.py  requirements.txt  run.ps1  streaming_transcriber.py  text_buffer.py  transcriber.py
